src/styles/main.scss
@import url('https://fonts.googleapis.com/css?family=Lato:300, 400');
@import url('https://fonts.googleapis.com/css?family=Roboto');
@import './utils/normalize.css';
@import './utils/reset.css';
@import './variables';

* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

body {
    font-family: 'Lato', sans-serif;
    background-color: $lightGray;
}

img {
    width: 100%;
    height: auto;
}

.container {
    width: 90%;
    margin: 0 auto;
}

.hero {
    height: 100vh;
    width: 100%;
    background: url('../images/markus-spiske-207946-unsplash.jpg') no-repeat center;
    background-size: cover;
    display: flex;
    justify-content: center;
    align-items: center;
    &__info {
        z-index: 1;
        color: white;
        text-align: center;
        padding: 1rem 1rem;
        border-top: 2px solid white;
        border-bottom: 2px solid white;
    }

    &__title {
        font-size: 4rem;
        font-weight: 600;
        line-height: 4.5rem;
    }
    &__subtitle {
        font-size: 2rem;
        line-height: 2.4rem;
        font-weight: 300;
        letter-spacing: .3rem;
    }
    &__projects-title {
        padding-top: .5rem;
        color: rgba(255,255,255,.7);
        font-size: 1.5rem;
        line-height: 2rem;
        font-weight: 300;
        letter-spacing: .3rem;
    }
}

.hero:before {
    position: absolute;
    content: '';
    width: 100%;
    height: 100%;
    background-color: rgba(17, 21, 49, 0.842);
}

.projects {
    background-color: $cream;
    padding: 4rem 0;
    &__title {
        text-align: center;
        font-size: 2rem;
        margin-bottom: 4rem;
    }

    &__showcase {
        display: flex;
        justify-content: space-between;
        flex-wrap: wrap;
    }
}

.project-card {
    overflow: hidden;
    flex-basis: 30%;
    background-color: #fff;
    border: 1px solid #333;
    border-radius: 10px;
    &__footer {
        display: flex;
        justify-content: space-between;
        flex-wrap: wrap;
    }
    &__header {
        background-color: #000;
    }
    &__title {
        padding: 0.75rem 0;
        text-align: center;
        font-size: 1.25rem;
    }

    &__body {
        padding: 0 0.5rem;
        margin: 0 0 0.75rem 0;
    }

    &__footer {
        padding: 0.5rem;
    }
}

.project {
    &__text {
        font-family: 'Roboto', sans-serif;
        text-align: justify;
        color: #333;
        font-size: 0.9rem;
        line-height: 1.5rem;
    }
    &__link {
        font-size: 0.8rem;
        text-decoration: none;
        color: inherit;
    }
    &__link:hover {
        cursor: pointer;
    }
}

@media screen and (max-width: 950px) {
    .project-card {
        flex-basis: 45%;
    }
}

@media screen and (max-width: 500px) {
    .project-card {
        flex-basis: 100%;
    }
}

